Fix visibility storyline safari

--- a/style.css
+++ b/style.css
@@ -53,3 +53,28 @@ p{
 .collapse{
   visibility: visible;
 }
+
+#home{
+  height: -moz-available;          /* WebKit-based browsers will ignore this. */
+   height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+   height: fill-available;
+}
+
+#home:before{
+  height: -moz-available;          /* WebKit-based browsers will ignore this. */
+  height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+  height: fill-available;
+}
+
+
+.timeline-content::after{
+  z-index: 1;
+}
+
+.timeline-content{
+  transition: visibility 0 linear .75s;
+
+}
+.timeline-panel{
+  visibility: visible !important;
+}
